--- a/css/main.css
+++ b/css/main.css
@@ -15,34 +15,10 @@ body{
     margin-right: 2em;
 }
 
-#banner{
-    margin-top: 3.5em;
-    position: relative;
-    width: 100%;
-    
-} 
-
-#banner > img{
-    background-color: rgb(77, 88, 100);
-    opacity: 0.8;
-    position: relative;
-    top: -5em;
-    width: 100%;
-    height: 100%;
-}
-
-#banner h1{
-    font-size: 3em;
-    color: #fff; 
-    font-family: 'Trocchi', serif;  
-    font-weight: normal; 
-    line-height: 48px; 
-    margin: 0; 
-}
 
 #paises{
+    margin-top: 10em;
     position: relative;
-    top:-2.5em;
 }
 
  #paises img{
@@ -67,50 +43,108 @@ body{
     position: relative;
 }
 
-/* #carrousel{
+#carousel{
     position: relative;
-    top: 3em;
-    margin-top: 3em;
-    /* height: 100vh; 
+    max-height: 100vh;
+    box-shadow: grey;
+    -webkit-box-shadow: 0px 24px 55px -1px rgba(0,0,0,0.58);
+    -moz-box-shadow: 0px 24px 55px -1px rgba(0,0,0,0.58);
+    box-shadow: 0px 24px 55px -1px rgba(0,0,0,0.58);
+}
+
+
+#carousel h1{
+    font-size: 3em;
+    color: #fff; 
+    font-family: 'Trocchi', serif;  
+    font-weight: normal; 
+    top: 1em;
+    margin-top: .2em; 
+}
+
+
+.carousel-inner{
+    max-height: 100vh;
 }
 
 .carousel-item{
-    height: 100vh;
-   
+    background-color: rgb(192, 108, 75);
 }
 
-
-.carrousel-inner img{
-    position: relative;
-    top: -5em;
+.carousel-item img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
-} */
-
-.slide{
-    margin-top: 1em;
-}
-
-.carousel-inner{
-    height: 100vh;
-}
-
-.slide .img-1{
-    width: 100%;
-    height: 100%;
+    opacity: 0.9;
+    filter: grayscale(.7);
     object-fit: contain;
+}
+
+.carousel-item .img-1{
     position: relative;
-    top: -10em;
+    top: -4em;
 }
 
 
-@media (max-width:900px){
+#carrito{
+    margin-top: 2em;
+}
+
+#carrito h2{
+    text-align: center;
+    color: lightseagreen;
+}
+
+
+@media only screen and (max-width:1618px){
+    .carousel-item .img-1{
+        position: relative;
+        top: 0em;
+    }
+}
+
+@media only screen and (max-width:1199px){
+    #carousel h1{
+        font-size: 3em;
+    }
+
+    .carousel-item .img-1{
+        position: relative;
+        top: 0;
+    }
+
+}
+
+@media only screen and (max-width:991px){
     .contenedor{
         width: 15em;
         height: 20em;
         position: relative;
     }
+   
+    #carousel h1{
+        font-size: 2em;
+        
+    }
+    
+
+}
+
+@media only screen and (max-width:767px){
+    #carousel h1{
+        font-size: 1.7em;
+    }
+
+}
+
+@media only screen and (max-width:575px){
+    
+
+    #carousel h1{
+        margin-top: 1em;
+        font-size: 1.4em;
+    }
 
 
 }
+
+
