--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     background-color: #555E7E;
     
@@ -94,6 +98,15 @@ body{
     color: lightseagreen;
 }
 
+
+.row{
+    width:100%;
+}
+
+
+.card-bg{
+    background-color: #555E7E; 
+}
 
 @media only screen and (max-width:1618px){
     .carousel-item .img-1{
