--- a/css/main.css
+++ b/css/main.css
@@ -28,58 +28,6 @@ a{
     width: 10%;
 }
 
-#div-welcome{
-    display: inline;
-    position: absolute;
-    top: -3em;
-    left:50%;
-    transform: translate(-50%, 0);
-}
-
-#welcome{
-    color: white;
-    font-size: 1.1em;
-    margin-bottom: 0;
-    margin-top: 0.2em;
-}
-
-
-#paises{
-
-    position: relative;
-    z-index: 0;
-}
-
- #paises img{
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    filter: grayscale(.8);
-    transition: all ease .2s;
-    /* box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2); */
-} 
-
-#paises img:hover{
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    filter: grayscale(0);
-    
-} 
-
-
-.contenedor{
-    width: 20em;
-    height: 35em;
-    position: relative;
-    transition: all ease .6s
-}
-
-.contenedor:hover{
-    width: 21em;
-    height: 36em;
-}
-
 #carousel{
     position: relative;
     max-height: 100vh;
@@ -121,6 +69,96 @@ a{
     top: -4em;
 }
 
+#div-welcome{
+    display: inline;
+    position: absolute;
+    top: -3em;
+    left:50%;
+    transform: translate(-50%, 0);
+}
+
+#welcome{
+    color: white;
+    font-size: 1.1em;
+    margin-bottom: 0;
+    margin-top: 0.2em;
+}
+
+
+#paises{
+
+    position: relative;
+    z-index: 0;
+}
+
+ #paises img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    filter: grayscale(.8);
+    transition: all ease .2s;
+} 
+
+#paises img:hover{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    filter: grayscale(0);
+    
+} 
+
+
+.contenedor{
+    width: 20em;
+    height: 35em;
+    position: relative;
+    transition: all ease .6s
+}
+
+
+/* Camisetas */
+.card-camiseta{
+    width: 20em;
+    height: 35em;
+}
+
+.card-body{
+    padding: 0;
+}
+
+.h4-card,.precio-card{
+    display: block;
+    width: 100%;
+    background-color: #343a40;
+    color: white;
+}
+
+.precio-card{
+    height: 14%;
+}
+
+.h4-card{
+    height: 6%;
+}
+
+.img-card{
+    height:70%;
+}
+
+.talles-card{
+    height: 10%;
+}
+
+.buy{
+    position: relative;
+}
+
+.img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
 #btn-carrito{
     position: absolute;
     display: inline-block;
@@ -128,8 +166,7 @@ a{
     width: 5%;
 }
 
-.row-carrito{
-    /* position: absolute; */
+.carritoCompras{
     margin-top: .3em;
     top: 8em;
     position: sticky;
@@ -139,9 +176,9 @@ a{
 #carrito{
     position: absolute;
     display:none;
+    right: 0;
     margin-bottom: 10em;
     background-color: white;
-    opacity: 0.7;
     border: .2px solid #000;
     box-shadow: 1px 3px 20px 10px rgb(0 0 0 / 20%);
 }
@@ -162,6 +199,10 @@ a{
     object-fit: cover;
 }
 
+.elemento-carrito{
+    border-bottom: .1px solid lightslategray;
+}
+
 
 .row{
     width:100%;
@@ -174,6 +215,7 @@ a{
 
 #contacto{
     height: auto;
+    background-color: white;
 }
 
 #contacto img{
