--- a/css/main.css
+++ b/css/main.css
@@ -176,7 +176,10 @@ a{
 #carrito{
     position: absolute;
     display:none;
+    height: 40vh;
+    overflow: scroll;
     right: 0;
+    left: 0;
     margin-bottom: 10em;
     background-color: white;
     border: .2px solid #000;
@@ -199,6 +202,13 @@ a{
     height: 100%;
     object-fit: cover;
 }
+
+/* #importeCarrito{
+    position: absolute;
+    top: 24em;
+    left: 8em;
+   
+} */
 
 /* .elemento-carrito{
     border-bottom: .1px solid lightslategray;
